fixed a small style error where certain words were too long for the card

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -137,7 +137,7 @@ button {
   &__item {
     flex-basis: calc(20% - 1rem);
     flex-grow: 1;
-    min-width: 6rem;
+    min-width: 9rem;
   }
 }
 
